side.css
@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
@keyframes comeUp {
    0% {
        transform: translateY(100%);
        opacity: 0;
      }
      100% {
        transform: translateY(0%);
        opacity: 1;
      }
}
:root {
    --padding-spacing: 0.5rem;
    --margin-spacing: 0.5rem;
    --obsidian: #000;
    --chalk: #fff;
    --graphite: rgba(252, 252, 252, 0.85);
}
*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* generic */
body {
    background-color: var(--chalk);
    /* typography */
    font-family: 'Hanken Grotesk', sans-serif;
    font-size: 1.12rem;
    font-style: normal;
    font-weight: normal;
    text-rendering: optimizeLegibility;

    width: 100%;
    height: 100vh;
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    grid-template-columns: 20% 80%;
    position: relative;
    overflow: hidden;
}
header {
    z-index: 1;
    grid-column: 1;
    grid-row: 1;
}
nav {
    z-index: 1;
    padding: 1rem;
    font-size: 0.80rem;
}

footer {
    z-index: 1;
    grid-column: 1;
    grid-row: 3;

    display: flex;
    align-items: flex-end;

    color: var(--obsidian);
    cursor: default;
}
main {
    z-index: 0;
    width: 100%;
    height: 100%;
    grid-column: 2/3;
    grid-row: 1/4;
    padding: 2rem;
}

a {
    all:unset;
    color: inherit;
}
a:hover {
    cursor: pointer;
}
button {
    all: unset;
}
ul li {
    padding-block: 0.35rem;
}
ul {
    padding-block: 0.5rem;
}
li::marker {
    color: transparent;
}
img {
    max-width: 100%;
    max-height: 75vh;
}
p {
    font-size: 1rem;
    padding-block: 1rem;
}
section {
    padding-block: 4rem;
}

/* classes */
.underline-animated {
    position: relative;
    
}
.underline-animated::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: -0.1rem;

    height: 2px;
    width: 0%;
    background-color: var(--graphite);

    transition: 500ms;
}
.underline-animated:hover::after {
    width: 100%;
}
.underline-animated:not(:hover)::after {
    width: 0%;
}
.animation-container {
    overflow: hidden;
}
.come-up-animation {
    animation: comeUp 1500ms forwards;
}
.bold {
    font-weight: bold;
}
.uppercase {
    text-transform: uppercase;
}
.chalk-text {
    color: var(--chalk);
}
.logo-header {
    font-weight: 400;
    font-size: 1.12rem;
    padding-block: 3rem 0rem;
    padding-inline: 1rem;
}
.copyright {
    padding: 1rem;
}
.difference {
    mix-blend-mode: difference;
}
.hide {
    opacity: 0;
}
.hidden {
    width: 1px;
    height: 1px;
    visibility: hidden;
}
/* id */
#logo {
    padding-inline: 1rem;
    padding-top: 2.5rem;
}
#gallery {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

